# rag-for-competitive-programming

./: .gitignore  README.md  config.py  logging_utils.py  messaging.py  pyproject.toml  settings.toml
core/: embedding.py
crawlers/cp_algo/: crawler.py  parser.py
db/: chat.py  dataset.py  db.py  enums.py  vector_db.py
prompts/: __init__.py
