[tool.poetry]
name = "rag-for-competitive-programming"
version = "0.1.0"
description = ""
authors = ["IgorPBorja <igorpradoborja@gmail.com>"]
license = "GNU Affero General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
