[tool.poetry]
name = "rag-for-competitive-programming"
version = "0.1.0"
description = ""
authors = ["IgorPBorja <igorpradoborja@gmail.com>"]
license = "GNU Affero General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.13.3"
html2text = "^2024.2.26"
clang-format = "^20.1.0"
aiohttp = "^3.11.14"
dynaconf = "^3.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
