[tool.poetry]
name = "rag-for-competitive-programming"
version = "0.1.0"
description = ""
authors = ["IgorPBorja <igorpradoborja@gmail.com>"]
license = "GNU Affero General Public License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.13.3"
html2text = "^2024.2.26"
clang-format = "^20.1.0"
aiohttp = "^3.11.14"
dynaconf = "^3.2.10"
sqlalchemy = "^2.0.41"
aiosqlite = "^0.21.0"
ollama = "^0.5.1"
langchain = "^0.3.25"
faiss-cpu = "^1.11.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
